Table users {
  id bigint [pk, increment]
  username varchar [not null]
  email varchar [not null]
  encrypted_password varchar [not null]
  reset_password_token varchar
  reset_password_sent_at datetime
  remember_created_at datetime
  confirmation_token varchar
  confirmed_at datetime
  confirmation_sent_at datetime
  unconfirmed_email varchar
  jti varchar [not null]
}

Table currencies {
  id bigint [pk, increment]
  name varchar
  code varchar
  number int
}

Table accounts {
  id bigint [pk, increment]
  name varchar
  amount decimal
  currency_id bigint
  user_id bigint
}


Table transactions {
  id bigint [pk, increment]
  amount decimal
  data timestamp
  category_id bigint
  area_id bigint
  account_id bigint
  destination_account_id bigint
  destination_amount decimal
}

Table categories {
  id bigint [pk, increment]
  name varchar
  user_id bigint
}

Table areas {
  id bigint [pk, increment]
  name varchar
  user_id bigint
}

Table loans {
  id bigint [pk, increment]
  name varchar
  interest decimal
  expiry_date timestamp
}

Table loans_transactions {
  loan_id bigint
  transaction_id bigint
}

Table rates {
  id bigint [pk, increment]
  from_id bigint
  to_id bigint
  rate double
}

Table wishes {
  id bigint [pk, increment]
  user_id bigint
  amount double
  currency_id bigint
  description varchar
  url varchar
}

Ref: "transactions"."category_id" > "categories"."id"

Ref: "areas"."id" < "transactions"."area_id"

Ref: "accounts"."id" < "transactions"."account_id"

Ref: "accounts"."id" < "transactions"."destination_account_id"

Ref: "currencies"."id" < "accounts"."currency_id"

Ref: "currencies"."id" < "rates"."from_id"

Ref: "currencies"."id" < "rates"."to_id"

Ref: "users"."id" < "categories"."user_id"

Ref: "users"."id" < "accounts"."user_id"

Ref: "users"."id" < "areas"."user_id"

Ref: "transactions"."id" < "loans_transactions"."transaction_id"

Ref: "loans"."id" < "loans_transactions"."loan_id"

Ref: "wishes"."user_id" < "users"."id"

Ref: "wishes"."currency_id" < "currencies"."id"